게시판 페이징 구현하기

--- a/04_Thymeleaf_sysntax/src/main/resources/templates/index.html
+++ b/04_Thymeleaf_sysntax/src/main/resources/templates/index.html
@@ -7,12 +7,16 @@
 <body>
 
   <!--/* Link URL Expression : @{} */-->
-  
+  <div style="text-align: center">
   <img th:src="@{/static/images/fefe.jpg}" width="100px"><br><br>
 
-  <a th:href="@{/value/expr}">Value Expression</a>
-  <a th:href="@{/utility}">Utility</a>
-  <a th:href="@{/messaege/expr}">Message expression</a>
+  <a th:href="@{/value/expr}">Value Expression</a><br>
+  <a th:href="@{/utility}">Utility</a><br>
+  <a th:href="@{/messaege/expr}">Message expression</a><br>
+  <a th:href="@{/javascript}">with JavaScript</a><br>
+  <a th:href="@{/frag/expr}">Fragment Expression</a><br>
+  <a th:href="@{/control}">Control Statement</a><br>
   
+  </div>
 </body>
 </html>
